--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "nyc ./node_modules/.bin/_mocha 'test/**/*.test.ts'",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@testdeck/mocha": "^0.2.0",
+    "chai": "^4.3.4",
     "core-js": "^3.6.5",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
+    "shimi": "^0.3.1",
+    "ts-mockito": "^2.6.1",
+    "ts-node": "^10.4.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2"
