--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target wc --name shimi-ui ./src/main.ts",
     "test": "nyc ./node_modules/.bin/_mocha 'test/**/*.test.ts'",
     "lint": "vue-cli-service lint"
   },
@@ -14,7 +14,7 @@
     "core-js": "^3.6.5",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
-    "shimi": "^0.3.1",
+    "shimi": "^0.3.2",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.4.0",
     "vue": "^2.6.11",
@@ -25,7 +25,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "typescript": "~4.1.5",
+    "typescript": "^4.4.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
