--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "shimi-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+     "build": "npm run build:wc & npm run build:lib",
+     "lint": "vue-cli-service lint",
+     "build:lib": "vue-cli-service build --target lib --name shimi-ui ./src/main.js",
+     "build:wc": "vue-cli-service build --target wc --name shimi-ui ./src/components/*.vue"
   },
+  "unpkg": "dist/shimi-ui.min.js",
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
