--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-     "build": "npm run build:wc & npm run build:lib",
-     "lint": "vue-cli-service lint",
-     "build:lib": "vue-cli-service build --target lib --name shimi-ui ./src/main.js",
-     "build:wc": "vue-cli-service build --target wc --name shimi-ui ./src/components/*.vue"
+    "build": "npm run build:wc & npm run build:lib",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
+    "build:lib": "vue-cli-service build --target lib --name shimi-ui ./src/main.js",
+    "build:wc": "vue-cli-service build --target wc --name shimi-ui ./src/components/*.vue"
   },
   "unpkg": "dist/shimi-ui.min.js",
   "dependencies": {
@@ -17,7 +18,9 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-unit-jest": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
+    "@vue/test-utils": "^1.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -35,7 +38,18 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {},
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "browserslist": [
     "> 1%",
