--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+        "no-unused-vars": "off",
+        "no-empty": "off"
+    },
     "overrides": [
       {
         "files": [
