--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shimi-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "author": "James Coyle",
   "license": "MIT",
@@ -10,14 +10,19 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "build:lib": "vue-cli-service build --target lib --name shimi-ui ./src/main.js",
-    "build:wc": "vue-cli-service build --target wc --name shimi-ui ./src/components/*.vue"
+    "build:wc": "vue-cli-service build --target wc --name shimi-ui ./src/components/*.vue",
+    "pub:lib": "npm run build:lib && npm publish",
+    "pub:wc": "npm run build:wc && npm publish"
   },
   "unpkg": "dist/shimi-ui.min.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "shimi": "^0.4.1",
+    "shimi": "^0.5.3",
     "vue": "^2.6.11"
   },
+  "files": [
+    "/dist"
+  ],
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
